web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
/*
 * Copyright (C) 2016 Inera AB (http://www.inera.se)
 *
 * This file is part of sklintyg (https://github.com/sklintyg).
 *
 * sklintyg is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * sklintyg is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/* These styles belong to the utkastHeader component and are imported into the inera-certificate.css*/
$header-fix-top-expand-background-color: #74777f;
$header-fix-top-btn-link-text-shadow-color: rgba(0, 0, 0, 0.75);
$header-fix-top-btn-link-color: #fff;
$header-fix-panel-box-shadow: #323232;
$header-fix-panel-border-bottom-color: #999;
$header-fix-panel-background-color: #fff;
$header-fix-panel-popover-color: #333;

.header-fix-top {
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: 500;

  h1.page-title {
    font-size: 18px;
  }
  .page-title {
    margin: 0 20px 0 0;
    line-height: 29px;

  }

  .backlink-icon {
    margin: 2px 5px 0 0;

  }
}

.header-fix-top-expand {
  position: relative;
  top: -20px;
  right: 30px;
}

.header-fix-top-expand-wrapper {
  position: absolute;
  right: 0;
  top: 10px;
  background-color: $header-fix-top-expand-background-color;
  text-align: center;
  -webkit-border-radius: 0 0 5px 5px;
  -moz-border-radius: 0 0 5px 5px;
  -ms-border-radius: 0 0 5px 5px;
  border-radius: 0 0 5px 5px;
  .btn-link {
    color: $header-fix-top-btn-link-color;
    text-shadow: 0 1px 1px $header-fix-top-btn-link-text-shadow-color;
    &:hover {
      color: $header-fix-top-btn-link-color;
      text-shadow: 0 1px 1px $header-fix-top-btn-link-text-shadow-color;
    }
  }
}

.utkast-header-right-group {
  padding:0 0 10px 10px;
}

.utkast-header-person-id {
  //should align with intygstyp h1
  .control-label {
    font-size: 18px;
    line-height:29px;
  }

}

.utkast-header-status {
  span {
    color:#666;
  }
  //so that the absolute positioned toggle button doesn't flow over content
  //the padding will case line break before that happens
  padding-right: 130px;
}

.header-fix-panel {
  padding: 10px 0 0 30px;
  border-bottom: 1px solid $header-fix-panel-border-bottom-color;
  background-color: $header-fix-panel-background-color;
  -ms-box-shadow: 0 -5px 25px $header-fix-panel-box-shadow;
  -webkit-box-shadow: 0 -5px 25px $header-fix-panel-box-shadow;
  -moz-box-shadow: 0 -5px 25px $header-fix-panel-box-shadow;
  box-shadow: 0 -5px 25px $header-fix-panel-box-shadow;
}

.header-fix-panel__title {
  display: inline-block;
  margin-right: 20px;
}

.header-fix-panel__title .popover {
  max-width: 450px;
}

.header-fix-panel__popover-content {
  font-size: 14px;
  line-height: 1.42857143;
  color: $header-fix-panel-popover-color;
  font-weight: normal;
}

.header-wrapper {
  /*  max-height: 110px; does commenting out this break anything? */
  overflow: hidden;
}

%transition {
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  position: relative;
  display: block!important;
}

.menucollapse {
  &.ng-hide-add {
    @extend %transition;
  }
  &.ng-hide-remove {
    @extend %transition;
  }
  &.ng-hide {
    margin-top: -100px;
  }
}

.intyg-error-panel {
  margin-top: 100px;
  max-width: 800px;
  .alert-danger {
    border: 1px solid $color_apple_blossom_approx;
  }
}

